# Cloud_Project_Final

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  package_deploy.ps1  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-backend.yml  deploy-lambda.yml
app/: auth.py  config.py  main.py  models.py  schemas.py  seed.py  simulator.py
app/engine/: risk.py  routing.py
app/routers/: __init__.py  admin.py  doctor.py  nurse.py  reception.py
app/services/: notifications.py  s3.py  sqs.py
data/: hospital_events.csv
deploy/: cloudwatch-agent.json  iam-ec2-policy.json  iam-lambda-policy.json  init-aws.sh  startup.sh
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  NotificationPanel.tsx  PaginatedTable.tsx  ProtectedRoute.tsx  SeverityBadge.tsx  StatsCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: Admin.tsx  Doctor.tsx  (+4 more)
lambda/: handler.py  requirements.txt
lambda_dist/: handler.py
lambda_dist/app/: auth.py  config.py  database.py  main.py  schemas.py  seed.py  simulator.py
lambda_dist/greenlet-3.2.5.dist-info/: RECORD
lambda_dist/psycopg_binary-3.3.4.dist-info/: RECORD
lambda_dist/python_dotenv-1.2.2.dist-info/: RECORD
lambda_dist/sqlalchemy-2.0.51.dist-info/: RECORD
tests/: conftest.py  test_api.py  test_auth.py  test_risk.py  test_routing.py
(+9 files in other folders)
